[tool.poetry]
name = "internet_monitor"
version = "0.1.0"
description = ""
authors = ["Sam Purkis <sam.purkis@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
peewee = "^3.15.2"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
